add disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,6 @@ author:
 version:             0.0.1
 github:
   repo:              https://github.com/praba230890/praba230890.github.io
+
+# Disqus comments
+comments:           true
